<resources>
    /* All app */
    <string name="app_name">FXM Harmony</string>
    <string name="ToastLogOut">Click again to exit</string>
    <string name="upload_start">Upload start</string>
    <string name="upload_success">Upload done successfully</string>
    <string name="videos">videos</string>
    <string name="files">files</string>
    <string name="images">images</string>

    /* Login Activity */
    <string name="logo">Logo</string>
    <string name="harmony">harmony</string>
    <string name="softwareFactory">SoFAC : Software Factory</string>
    <string name="loginButton">Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="fieldEmpty">Field empty</string>
    <string name="errorConnection">No connection to server / Incorrect login or password</string>
    <string name="errorServer">No connection to server</string>

    /* Navigation drawer - TasksActivity */
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    /* Menu Detail Task Activity */
    <string name="menu_back">Back</string>
    <string name="menu_done">Done</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_translate_post">Translate post</string>

    <!--Settings Activity-->
    <string name="push_message">Push Message</string>
    <string name="language">Language</string>
    <string name="edit_name">Edit name</string>
    <string name="change_name">Change name</string>
    <string name="new_name">New name</string>
    <string name="logout">Logout</string>
    <string name="photo_gallery">Gallery</string>
    <string name="photo_camera">Camera</string>
    <string name="photo_delete">Delete</string>
    <string name="delete_photo_question"> Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="korean">Korean</string>
    <string name="change_language">Change language</string>
    <string name="empty_name_error">Empty name should not be empty</string>
    <string name="size_name_error">Name should be in range from 3 to 16 characters</string>


    <!-- Change post activity-->
    <string name="change_post_activity_name">Change Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_write_post">WritePostActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>


    <string name="translate_post">Translate post</string>
    <string name="change_post">Change post</string>
    <string name="please_input_text_post">Please input text post</string>
    <string name="create_post">Create post</string>
    <string name="please_input_text_message">Please input text message</string>
    <string name="FXM_group">FXM group</string>
    <string name="comment_was_delete">Comment was delete!</string>
    <string name="problem_with_ID_comment">Problem with ID comments!</string>
    <string name="create_comment_error">Create comment error!</string>
    <string name="edit_comment_error">Edit comment error!</string>
    <string name="field_empty">Field empty!</string>
    <string name="english_spinner">English</string>
    <string name="korean_spinner">Korean</string>
    <string name="russian_spinner">Russian</string>
    <string name="original_spinner">Original</string>
    <string name="post_was_delete">Post was delete!</string>
    <string name="push_tile">Push</string>
    <string name="send">SEND</string>
    <string name="event_date">Event date:&#xA0;</string>
    <string name="manager">Manager</string>
    <string name="comments">Comments</string>
    <string name="push_menu">Push</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="configuration">Configuration</string>

    <!--Need check-->

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="choice_double_click_post">
        <!--<item>Edit</item>-->
        <item>Delete</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="list_is_empty">List is Empty</string>
    <string name="update_list">Update list</string>
    <string name="write_post">Write post</string>

    <string name="list_comments_empty">The list of the comments is empty</string>
    <string name="list_post_empty">The list of the posts is empty</string>
    <string name="list_push_empty">The list of the push is empty</string>

    <string name="text_orig">Original</string>
    <string name="text_eng">English</string>
    <string name="text_kor">Korean</string>
    <string name="text_rus">Russian</string>
    <string name="click_to_download_file">Click to download file</string>
    <string name="group_type">Group:&#xA0;</string>
    <string name="leader_group">Leader group</string>
    <string name="member_group">Member group</string>
    <string name="staff_group">Staff group</string>


</resources>
