<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/idPushItem"
            android:icon="@drawable/receipt"
            android:title="@string/push_menu" />
        <item
            android:id="@+id/idGroupLeader"
            android:icon="@drawable/account_multiple"
            android:title="@string/leader_group" />
        <item
            android:id="@+id/idGroupMember"
            android:icon="@drawable/account_multiple"
            android:title="@string/member_group" />

        <item
            android:id="@+id/idGroupStaff"
            android:icon="@drawable/account_multiple"
            android:title="@string/staff_group" />

    </group>

    <item android:title="@string/configuration">
        <menu>
            <item
                android:id="@+id/idSettingItem"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/idExitItem"
                android:icon="@drawable/exit_to_app"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
