<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="com.sofac.fxmharmony.view.LoginActivity">

    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <!--<ImageView-->
        <!--android:id="@+id/imageHarmony"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="120dp"-->
        <!--android:contentDescription="@string/harmony"-->
        <!--android:src="@drawable/harmony" />-->

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/account" />

            <EditText
                android:id="@+id/editLogin"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:textColor="@color/ColorGreyDark"
                android:textColorHint="@color/colorHint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/lock" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:textColor="@color/ColorGreyDark"
                android:textColorHint="@color/colorHint" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/loginButton"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

    <TextView
        android:id="@+id/imageSoFAC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:padding="20dp"
        android:text="@string/softwareFactory"
        android:textColor="@color/ColorGreyDark"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>
